feat: add repositories and services for customer merges, invoice line items, invoice sequences, and payments
- Implemented CustomerMergeRepository for managing customer merge records.
- Created InvoiceLineItemRepository for handling invoice line items.
- Added InvoiceNumberSequenceRepository to generate and manage invoice number sequences.
- Developed PaymentRepository for managing payment records associated with invoices.
- Introduced PaymentService to handle payment creation and retrieval, including validation against invoice status.
- Added PdfExportService for generating PDF reports for invoices, daily summaries, product summaries, and customer summaries.
- Implemented MergeModal component for merging customers in the UI.
- Created PaymentModal component for processing payments in the UI.
- Added RevenueChart component for visualizing revenue data.
- Developed TruckDrilldown component for displaying sales details by truck.

--- a/src/renderer/i18n/en.json
+++ b/src/renderer/i18n/en.json
@@ -108,6 +108,8 @@
     "taxId": "Tax ID",
     "isTemporary": "Temporary Customer",
     "salesHistory": "Sales History",
+    "merge": "Merge",
+    "selectTarget": "Select target customer",
     "totalPurchases": "Total Purchases"
   },
   "invoices": {
@@ -140,7 +142,11 @@
     "weekly": "Weekly",
     "monthly": "Monthly",
     "revenue": "Revenue",
-    "salesCount": "Sale Count"
+    "salesCount": "Sale Count",
+    "exportPdf": "Export PDF",
+    "exporting": "Exporting...",
+    "exportSuccess": "Report exported",
+    "exportError": "Failed to export"
   },
   "settings": {
     "title": "Settings",
