--- a/src/renderer/i18n/en.json
+++ b/src/renderer/i18n/en.json
@@ -8,6 +8,7 @@
     "trucks": "Trucks",
     "products": "Products",
     "customers": "Customers",
+    "users": "User Management",
     "invoices": "Invoices",
     "reports": "Reports",
     "settings": "Settings"
