--- a/src/renderer/i18n/ru.json
+++ b/src/renderer/i18n/ru.json
@@ -8,6 +8,7 @@
     "trucks": "Грузовики",
     "products": "Товары",
     "customers": "Клиенты",
+    "users": "Управление Пользователями",
     "invoices": "Счета",
     "reports": "Отчеты",
     "settings": "Параметры"
