--- a/src/renderer/i18n/tr.json
+++ b/src/renderer/i18n/tr.json
@@ -8,6 +8,7 @@
     "trucks": "TIR'lar",
     "products": "Ürünler",
     "customers": "Müşteriler",
+    "users": "Kullanıcı Yönetimi",
     "invoices": "Faturalar",
     "reports": "Raporlar",
     "settings": "Ayarlar"
