--- a/src/renderer/i18n/en.json
+++ b/src/renderer/i18n/en.json
@@ -11,6 +11,7 @@
     "users": "User Management",
     "invoices": "Invoices",
     "reports": "Reports",
+    "audit": "Audit Logs",
     "settings": "Settings"
   },
   "common": {
@@ -206,5 +207,16 @@
     "TRANSFER": "Transfer",
     "CHECK": "Check",
     "CREDIT_CARD": "Credit Card"
+  },
+  "audit": {
+    "title": "Audit Logs",
+    "entityType": "Entity Type",
+    "entityId": "Entity ID",
+    "action": "Action",
+    "details": "Details",
+    "date": "Date",
+    "searchPlaceholder": "Search by ID...",
+    "page": "Page",
+    "records": "records"
   }
 }
